--- a/dlr_tables.css
+++ b/dlr_tables.css
@@ -21,22 +21,39 @@ table.schedule {
     font-size: 0.75em;
     width: 100%;
 }
-
-
 /* Table Cell Styles */
 table.schedule th, 
-table.scedule td {
+table.schedule td {
     border: 1px solid grey;
 }
-
-
 /* Table Caption Styles */
-
-
-
+table.schedule caption {
+    caption-side: bottom;
+    text-align: right;
+}
 /* Row Group Styles */
+table.schedule thead  {
+    background: rgb(153, 0, 153);
+    color: white;
+}
 
+table.schedule thead tr{
+    height: 30px
+}
 
+table.schedule tfoot tr {
+    background: black;
+    color: white;
+}
 
+table.schedule tfoot {
+    height: 40px;
+}
 /* Column Group Styles */
+col#firstCol {
+    background: rgb(218, 210, 218);
+}
 
+col.dayCols {
+    background: rgb(255, 220, 255);
+}
